<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddGoalFragment">

        <LinearLayout
                android:orientation="vertical"
                android:layout_margin="@dimen/margin_normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/add_name"
                    style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:hint="@string/goal_hint"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textStyle="bold"
                    android:typeface="normal" />

            <FrameLayout
                    android:id="@+id/start_date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="start"
                        android:text="@string/start_date_text"
                        android:textSize="@dimen/default_font_size" />

                <TextView
                        android:id="@+id/add_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="@dimen/default_font_size" />

            </FrameLayout>

            <FrameLayout
                    android:id="@+id/end_date_layout"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/end_date_text"
                        android:clickable="true"
                        android:gravity="start"
                        android:textSize="@dimen/default_font_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"/>

                <TextView
                        android:id="@+id/add_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="@dimen/default_font_size" />

            </FrameLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/action_frequency"
                    android:textAlignment="center"
                    android:textSize="@dimen/default_font_size" />

            <!--<Spinner-->
            <!--android:layout_marginTop="@dimen/default_margin"-->
            <!--android:id="@+id/action_frequency"-->
            <!--android:textAlignment="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:entries="@array/frequency_values"-->
            <!--android:spinnerMode="dropdown" />-->

            <Button
                    android:id="@+id/add_frequency"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textSize="@dimen/default_font_size" />

            <TextView
                    android:text="@string/goal_description_text"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:textSize="@dimen/default_font_size"
                    android:hint="@string/goal_description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <EditText
                    android:id="@+id/add_description"
                    style="@style/Widget.MaterialComponents.TextInputEditText.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="@string/description_hint"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:maxLength="120"
                    android:textStyle="italic" />

        </LinearLayout>

    </FrameLayout>
</layout>